--- a/Restaurantes/Hotel/Hotel.csproj
+++ b/Restaurantes/Hotel/Hotel.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="CarritoContext.cs" />
+    <Compile Include="Controllers\CarritoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PedidoController.cs" />
